--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- font awesome -->
   <script src="js/all.js"></script>
   <script type="text/javascript" src="Node.js">  </script>
+  <script src="visitor.js">  </script>
   <title>FARIS EMPIRE CARS</title>
 
 </head>
@@ -69,6 +70,13 @@
             OldCars
           </a>
         </li>
+		
+		<li class="nav-item">
+          <a href="Check_Visitors.html" class="nav-link">
+            View
+          </a>
+        </li>
+		
       </ul>
       <!-- social icons -->
       <!-- <div class="nav-icons d-none d-lg-block px-4">
