--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
           </a>
         </li>
 		
+		<li class="nav-item">
+          <a href="contact.html" class="nav-link">
+            Contact Us
+          </a>
+        </li>
+		
       </ul>
       <!-- social icons -->
       <!-- <div class="nav-icons d-none d-lg-block px-4">
