--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,11 @@
 			</textarea>
 			
 			</div>
-	 <button type="submit" class="btn btn-success"> Submit </button>
+	 <button type="submit" class="btn btn-success">	
+	 <a href="Validity.html" class="nav-link">
+	 Submit 
+	 </a>
+	 </button>
 	            
             </form>        
 	</div>                      
