--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
 	
 	<div class="w-50 m-auto">
 		<form action="https://formsubmit.co/sahirfaris200@gmail.com" method="post">
+		<input type="hidden" name="_next" value="https://faris200.github.io/Pre-Development/Validity.html">
 			<div class="form-group">
 			<label>Username</label>
 			<input type="text" name="user" autocomplete="off" class="form-control">
@@ -46,9 +47,8 @@
 			
 			</div>
 	 <button type="submit" class="btn btn-success">	
-	 <a href="Validity.html" class="nav-link">
+	 
 	 Submit 
-	 </a>
 	 </button>
 	            
             </form>        
