--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url"           content="https://mylices.com" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content=" PreDevelopment " />
+    <meta property="og:description"   content="FarisEmpire website is a website made mainly for car fashion. Explore the lastest model of cars." />
+    <meta property="og:image"         content="https://www.behance.net/gallery/40200725/Empire-Salon-Logo-Design" />
+	
   <!-- bootstrap css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- main css -->
