--- a/contact.html
+++ b/contact.html
@@ -19,28 +19,28 @@
 	
 	<div class="w-50 m-auto">
 		<form action="https://formsubmit.co/sahirfaris200@gmail.com" method="post">
-		<input type="hidden" name="_next" value="https://faris200.github.io/Pre-Development/Validity.html">
+		<input type="hidden" name="_next" value="Validity.html">
 			<div class="form-group">
 			<label>Username</label>
-			<input type="text" name="user" autocomplete="off" class="form-control">
+			<input type="text" name="user" autocomplete="off" class="form-control"  required>
 			
 			</div>
 	 
 			<div class="form-group">
 			<label>Email</label>
-			<input type="text" name="email" autocomplete="off" class="form-control">
+			<input type="text" name="email" autocomplete="off" class="form-control" required>
 			
 			</div>
 			
 			<div class="form-group">
 			<label>Mobile</label>
-			<input type="text" name="mobile" autocomplete="off" class="form-control">
+			<input type="text" name="mobile" autocomplete="off" class="form-control" required>
 			
 			</div>
 	 
 			<div class="form-group">
 			<label>Comments</label>
-			<textarea class=form-control>
+			<textarea class=form-control  required>
 			   
 			
 			</textarea>
