--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:url"           content="https://vulongtrap.com" />
+    <meta property="og:url"           content="https://vulongtrap.ml" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content=" FarisEmpire " />
     <meta property="og:description"   content="FarisEmpire website is a website made mainly for car fashion. Explore the lastest model of cars." />
