--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:title"         content=" FarisEmpire " />
     <meta property="og:description"   content="FarisEmpire website is a website made mainly for car fashion. Explore the lastest model of cars." />
     <meta property="og:image"         content="https://www.behance.net/gallery/40200725/Empire-Salon-Logo-Design" />
+	<link rel="shortcut icon" href="favicon.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli%7CRubik:400,400i,500,700">
 	
   <!-- bootstrap css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
