--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta property="og:title"         content=" FarisEmpire " />
     <meta property="og:description"   content="FarisEmpire website is a website made mainly for car fashion. Explore the lastest model of cars." />
     <meta property="og:image"         content="https://www.behance.net/gallery/40200725/Empire-Salon-Logo-Design" />
-	 <link rel="icon" type="image/x-icon" href="images/Jour.png">
+	 <!-- <link rel="icon" type="image/x-icon" href="images/Jour.png"> -->
+	 <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli%7CRubik:400,400i,500,700">
 	
   <!-- bootstrap css -->
